--- a/plugins/templates/minimalistic/resources/login.css
+++ b/plugins/templates/minimalistic/resources/login.css
@@ -1,4 +1,4 @@
-﻿/* login, registration, lost password */
+/* login, registration, lost password */
 .login_form, form.regform, form.lostpassform, form.fullsearchform {
     text-align: left;
     width: 100%;
