--- a/plugins/templates/minimalistic/resources/search.css
+++ b/plugins/templates/minimalistic/resources/search.css
@@ -1,4 +1,4 @@
-﻿/* search */
+/* search */
 input.search-query[type="search"] {
     background-color: rgb(246, 246, 246);
     background-image: none;
