--- a/plugins/templates/minimalistic/resources/system.css
+++ b/plugins/templates/minimalistic/resources/system.css
@@ -1,4 +1,127 @@
-﻿.bborder {
+/* navigation */
+.breadcrumbs {
+    color: #576F82;
+    font-size: 18px;
+    font-family: 'Encode Sans Condensed', sans-serif;
+    text-align: left;
+    text-overflow: ellipsis;
+    text-shadow: none;
+    width: 9999px;
+    max-width: 100%;
+    min-width: 20px;
+    padding-top: 0;
+    padding-bottom: 5px;
+    padding-left: 0;
+    padding-right: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: 0;
+    margin-right: 0;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    clear: none;
+    display: block;
+    float: left;
+}
+
+.breadcrumbs ul {
+    padding-top: 0;
+    padding-bottom: 6px;
+    padding-left: 0;
+    padding-right: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: 0;
+    margin-right: 0;
+    border-top-width: 0;
+    border-right-width: 0;
+    border-bottom-width: 1px;
+    border-left-width: 0;
+    border-top-style: none;
+    border-right-style: none;
+    border-bottom-style: dotted;
+    border-left-style: none;
+    border-top-color: currentcolor;
+    border-right-color: currentcolor;
+    border-bottom-color: rgb(164, 164, 164);
+    border-left-color: currentcolor;
+    float: left;
+}
+
+.breadcrumbs li {
+    font-size: 17px;
+    list-style-type: none;
+    list-style-image: none;
+    list-style-position: outside;
+    padding-top: 0;
+    padding-bottom: 0;
+    padding-left: 0;
+    padding-right: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: 0;
+    margin-right: 0;
+    float: left;
+}
+
+.breadcrumbs a {
+    background-color: transparent;
+    background-image: url("images/menu/menu_a-black.png");
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-clip: border-box;
+    background-origin: padding-box;
+    background-position-x: 1px;
+    background-position-y: center;
+    background-size: 8px auto;
+    color: #576F82;
+    line-height: 110%;
+    padding-top: 5px;
+    padding-bottom: 10px;
+    padding-left: 16px;
+    padding-right: 10px;
+    transition-property: all;
+    transition-duration: 0.15s;
+    transition-timing-function: linear;
+    transition-delay: 0s;
+}
+
+.breadcrumbs a:hover {
+    background-color: transparent;
+    background-image: url("images/menu/menu_a-black.png");
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-clip: border-box;
+    background-origin: padding-box;
+    background-position-x: 1px;
+    background-position-y: center;
+    background-size: 8px auto;
+    color: #111111;
+    padding-top: 5px;
+    padding-bottom: 10px;
+    padding-left: 16px;
+    padding-right: 10px;
+}
+
+.breadcrumbs a:active, .breadcrumbs a:focus {
+    background-color: transparent;
+    background-image: url("images/menu/menu_a-black.png");
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-clip: border-box;
+    background-origin: padding-box;
+    background-position-x: 1px;
+    background-position-y: center;
+    background-size: 8px auto;
+    color: #111111;
+    padding-top: 5px;
+    padding-bottom: 10px;
+    padding-left: 16px;
+    padding-right: 10px;
+}
+
+/* navigation end */
+.bborder {
     padding-top: 0;
     padding-bottom: 8px;
     padding-left: 0;
